--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,24 @@
 @import url('https://fonts.googleapis.com/css2?family=Red+Rose:wght@400;700&display=swap');
 
+:root{
+  --textblack-color: #434343;
+  --white-color: #ffffff;
+  --major-background-color: linear-gradient(90deg, #A02279 11.45%, #A02279 11.45%);
+  /*--accent-color: #22beaa;
+  --body-background-color: #202028;
+  --border-bottom-color: rgba(255,255,255,.05);
+  --transparent-button-color: rgba(255,255,255,.1);
+  --font-size-small: 1.4rem;
+  --font-size-normal: 1.6rem;
+  --font-size-medium: 2rem;
+  --font-size-large: 2.4rem;
+  --font-family: 'Poppins', sans-serif;
+  --margin-small: 1rem;
+  --margin-medium: 1.5rem;
+  --gap-small: 1rem;
+  --gap-medium: 2.5rem; */
+}
+
 *,
 *::before,
 *::after {
