--- a/src/index.css
+++ b/src/index.css
@@ -4,8 +4,8 @@
   --textblack-color: #434343;
   --white-color: #ffffff;
   --major-background-color: linear-gradient(90deg, #A02279 11.45%, #A02279 11.45%);
-  /*--accent-color: #22beaa;
-  --body-background-color: #202028;
+  --footer-background-color: #1D1D1E;
+  /*--body-background-color: #202028;
   --border-bottom-color: rgba(255,255,255,.05);
   --transparent-button-color: rgba(255,255,255,.1);
   --font-size-small: 1.4rem;
