--- a/src/index.css
+++ b/src/index.css
@@ -5,8 +5,8 @@
   --white-color: #ffffff;
   --major-background-color: linear-gradient(90deg, #A02279 11.45%, #A02279 11.45%);
   --footer-background-color: #1D1D1E;
-  /*--body-background-color: #202028;
-  --border-bottom-color: rgba(255,255,255,.05);
+  --whiteline-background-color: linear-gradient(124.4deg, #FFFFFF 10.8%, #FFFFFF 87.34%);
+  /*--border-bottom-color: rgba(255,255,255,.05);
   --transparent-button-color: rgba(255,255,255,.1);
   --font-size-small: 1.4rem;
   --font-size-normal: 1.6rem;
