--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@
   --major-background-color: linear-gradient(90deg, #A02279 11.45%, #A02279 11.45%);
   --footer-background-color: #1D1D1E;
   --whiteline-background-color: linear-gradient(124.4deg, #FFFFFF 10.8%, #FFFFFF 87.34%);
-  /*--border-bottom-color: rgba(255,255,255,.05);
+  /*--border-bottom-color: #434343;
   --transparent-button-color: rgba(255,255,255,.1);
   --font-size-small: 1.4rem;
   --font-size-normal: 1.6rem;
@@ -34,6 +34,8 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
+code, 
+button,
+input {
   font-family: 'Red Rose', cursive;
 }
