--- a/src/style/PlaceList.css
+++ b/src/style/PlaceList.css
@@ -3,6 +3,7 @@
     grid-template-columns: repeat(auto-fit, minmax(292px, 1fr));
     column-gap: 24px;
     row-gap: 24px;
+    color: var(--textblack-color);
 }
 
 .placelist-container {
