--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,19 @@
-@import url('https://fonts.googleapis.com/css2?family=Red+Rose:wght@400;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Red+Rose:wght@400;700&display=swap");
 
-:root{
+:root {
   --textblack-color: #434343;
   --white-color: #ffffff;
-  --major-background-color: linear-gradient(90deg, #A02279 11.45%, #A02279 11.45%);
-  --footer-background-color: #1D1D1E;
-  --whiteline-background-color: linear-gradient(124.4deg, #FFFFFF 10.8%, #FFFFFF 87.34%);
+  --major-background-color: linear-gradient(
+    90deg,
+    #a02279 11.45%,
+    #a02279 11.45%
+  );
+  --footer-background-color: #1d1d1e;
+  --whiteline-background-color: linear-gradient(
+    124.4deg,
+    #ffffff 10.8%,
+    #ffffff 87.34%
+  );
   /*--border-bottom-color: #434343;
   --transparent-button-color: rgba(255,255,255,.1);
   --font-size-small: 1.4rem;
@@ -27,20 +35,29 @@
   box-sizing: border-box;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   margin: 0;
-  font-family: 'Red Rose', cursive;
+  font-family: "Red Rose", cursive;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-code, 
+code,
 button,
 input {
-  font-family: 'Red Rose', cursive;
+  font-family: "Red Rose", cursive;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   font-weight: 700;
 }
 
