--- a/src/style/Header.css
+++ b/src/style/Header.css
@@ -1,5 +1,10 @@
 header {
+  width: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
   padding: 20px 0;
+  background-color: #ffffff;
 }
 
 .header-container {
@@ -25,6 +30,7 @@ header {
   line-height: 25px;
   text-decoration: none;
   color: var(--textblack-color);
+  transition: 0.5s;
 }
 
 .header-btn {
@@ -37,4 +43,8 @@ header {
   font-weight: 400;
   font-size: 16px;
   line-height: 20px;
+}
+
+.scroll-header {
+  box-shadow: 0 -1px 4px rgba(0, 0, 0, 0.15);
 }
