--- a/src/style/Hero.css
+++ b/src/style/Hero.css
@@ -1,6 +1,6 @@
 .hero-section {
   background: var(--whiteline-background-color);
-  padding: 80px 0;
+  padding: 150px 0 80px;
 }
 
 .hero-container {
