--- a/src/style/Places.css
+++ b/src/style/Places.css
@@ -1,6 +1,6 @@
 .places-section {
   background: var(--whiteline-background-color);
-  padding: 80px 0;
+  padding: 120px 0 80px;
 }
 
 .places-container > h2 {
