--- a/src/style/PlaceList.css
+++ b/src/style/PlaceList.css
@@ -47,3 +47,39 @@
     margin-top: 9px;
 }
 
+/* BREAKPOINTS */
+/* Large Screens */
+/* @media screen and (max-width: 1250px) {
+  .container {
+    max-width: 992px;
+  margin: 0 auto;
+
+  }
+} */
+
+/* @media screen and (max-width: 992px) {
+  .container {
+    max-width: 768px;
+  }
+} */
+
+/* For medium devices */
+/* @media screen and (max-width: 768px) {
+  .container {
+    max-width: 576px;
+  }
+} */
+
+@media screen and (max-width: 576px) {
+  .placelist {
+    justify-items: center;
+  }
+}
+
+/* For small devices */
+/* @media screen and (max-width: 350px) {
+  .container {
+    max-width: 250px;
+  }
+} */
+
