--- a/src/style/Container.css
+++ b/src/style/Container.css
@@ -2,3 +2,39 @@
   max-width: 1250px;
   margin: 0 auto;
 }
+
+/* BREAKPOINTS */
+/* Large Screens */
+@media screen and (max-width: 1250px) {
+  .container {
+    max-width: 992px;
+  margin: 0 auto;
+
+  }
+}
+
+@media screen and (max-width: 992px) {
+  .container {
+    max-width: 768px;
+  }
+}
+
+/* For medium devices */
+@media screen and (max-width: 768px) {
+  .container {
+    max-width: 576px;
+  }
+}
+
+@media screen and (max-width: 576px) {
+  .container {
+    max-width: 500px;
+  }
+}
+
+/* For small devices */
+@media screen and (max-width: 350px) {
+  .container {
+    max-width: 250px;
+  }
+}
