--- a/src/style/Footer.css
+++ b/src/style/Footer.css
@@ -27,11 +27,17 @@ footer {
   cursor: pointer;
 }
 
-.footer-copyright {
+.footer-copyright,
+.footer-copyright-mobile {
   font-size: 16px;
   line-height: 16px;
   font-weight: 400;
   margin-top: 50px;
+}
+
+.footer-copyright-mobile {
+  display: none;
+  text-align: center;
 }
 
 .footer-menu > ul {
@@ -46,7 +52,52 @@ footer {
 }
 
 .footer-menu > h3 {
+  font-weight: 700;
   font-size: 18px;
   line-height: 22.48px;
   margin-bottom: 20px;
 }
+
+/* BREAKPOINTS */
+/* Large Screens */
+/* @media screen and (max-width: 992px) {
+  
+} */
+
+/* For medium devices */
+/* @media screen and (max-width: 768px) {
+  
+} */
+
+@media screen and (max-width: 576px) {
+  .footer-container {
+    display: grid;
+    gap: 30px;
+  }
+
+  .footer-container > div:not(last-child) {
+    margin-bottom: 20px;
+  }
+
+  .footer-social-icons {
+    margin-top: 20px;
+  }
+
+  .footer-copyright {
+    display: none;
+  }
+
+  .footer-copyright-mobile {
+    display: block;
+  }
+
+  .footer-menu > h3 {
+  margin-bottom: 10px;
+
+  }
+}
+
+/* For small devices */
+/* @media screen and (max-width: 350px) {
+  
+} */
