--- a/src/style/Header.css
+++ b/src/style/Header.css
@@ -13,7 +13,8 @@ header {
   align-items: center;
 }
 
-.header-logo {
+.header-logo,
+.mobile-header-logo {
   width: 233px;
   height: 36.67px;
   cursor: pointer;
@@ -24,7 +25,8 @@ header {
   gap: 48px;
 }
 
-.header-navlinks > a {
+.header-navlinks > a,
+.nav-mobile > a {
   font-weight: 400;
   font-size: 16px;
   line-height: 25px;
@@ -33,7 +35,8 @@ header {
   transition: 0.5s;
 }
 
-.header-btn {
+.header-btn,
+.header-btn-mobile {
   padding: 15px 27px;
   background: var(--major-background-color);
   color: var(--white-color);
@@ -45,6 +48,97 @@ header {
   line-height: 20px;
 }
 
+.header-btn-mobile {
+  display: none;
+  width: 250px;
+}
+
+.header-mobile,
+.close-header-mobile {
+  width: 32px;
+  height: 32px;
+  display: none;
+  cursor: pointer;
+}
+
 .scroll-header {
   box-shadow: 0 -1px 4px rgba(0, 0, 0, 0.15);
 }
+
+.nav-mobile-container,
+.mobile-header-logo {
+  display: none;
+}
+
+.nav-mobile {
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+}
+
+/* BREAKPOINTS */
+/* Large Screens */
+/* @media screen and (max-width: 1250px) {
+}
+
+@media screen and (max-width: 1000px) {
+  .nft-about-img > img {
+    width: 504px;
+    height: 374.85px;
+  }
+} */
+
+/* For medium devices */
+/* @media screen and (max-width: 768px) {
+  
+} */
+
+@media screen and (max-width: 576px) {
+  .header-navlinks,
+  .header-btn {
+    display: none;
+  }
+
+  .mobile-header-logo {
+    display: block;
+  }
+
+  .header-mobile,
+  .header-btn-mobile,
+  .close-header-mobile {
+    display: block;
+  }
+
+  .close-header-mobile {
+    position: absolute;
+    right: 10%;
+  }
+
+  .nav-mobile-container {
+    display: block;
+  }
+
+  .nav-mobile {
+    width: 100%;
+    height: 100vh;
+    background-color: var(--white-color);
+    position: fixed;
+    top: 0;
+    left: 0;
+    padding: 2.5rem;
+    transform: translateX(-185%);
+    z-index: 999;
+    transition: transform 1s;
+  }
+
+  .nav-mobile.nav-active {
+    transform: translateX(0);
+  }
+}
+
+/* For small devices */
+/* @media screen and (max-width: 350px) {
+  .container {
+    max-width: 250px;
+  }
+} */
