--- a/src/style/Places.css
+++ b/src/style/Places.css
@@ -9,3 +9,40 @@
   line-height: 59.95px;
   margin-bottom: 50px;
 }
+
+/* BREAKPOINTS */
+/* Large Screens */
+/* @media screen and (max-width: 1250px) {
+  .container {
+    max-width: 992px;
+  margin: 0 auto;
+
+  }
+} */
+
+/* @media screen and (max-width: 992px) {
+  .container {
+    max-width: 768px;
+  }
+} */
+
+/* For medium devices */
+/* @media screen and (max-width: 768px) {
+  .container {
+    max-width: 576px;
+  }
+} */
+
+@media screen and (max-width: 576px) {
+  .places-container > h2 {
+    font-size: 35px;
+    line-height: 45px;
+  }
+}
+
+/* For small devices */
+/* @media screen and (max-width: 350px) {
+  .container {
+    max-width: 250px;
+  }
+} */
