--- a/src/style/Container.css
+++ b/src/style/Container.css
@@ -7,13 +7,17 @@
 /* Large Screens */
 @media screen and (max-width: 1250px) {
   .container {
-    max-width: 992px;
-  margin: 0 auto;
-
+    max-width: 1100px;
   }
 }
 
-@media screen and (max-width: 992px) {
+@media screen and (max-width: 1100px) {
+  .container {
+    max-width: 992px;
+  }
+}
+
+@media screen and (max-width: 920px) {
   .container {
     max-width: 768px;
   }
@@ -22,19 +26,25 @@
 /* For medium devices */
 @media screen and (max-width: 768px) {
   .container {
-    max-width: 576px;
+    max-width: 650px;
   }
 }
 
 @media screen and (max-width: 576px) {
   .container {
-    max-width: 500px;
+    max-width: 450px;
   }
 }
 
 /* For small devices */
+@media screen and (max-width: 450px) {
+  .container {
+    max-width: 350px;
+  }
+}
+
 @media screen and (max-width: 350px) {
   .container {
-    max-width: 250px;
+    max-width: 300px;
   }
 }
