--- a/src/style/Footer.css
+++ b/src/style/Footer.css
@@ -1,6 +1,6 @@
 footer {
   background: var(--footer-background-color);
-  padding: 80px 0;
+  padding: 80px 20px;
   color: var(--white-color);
 }
 
@@ -65,11 +65,7 @@ footer {
 } */
 
 /* For medium devices */
-/* @media screen and (max-width: 768px) {
-  
-} */
-
-@media screen and (max-width: 576px) {
+@media screen and (max-width: 768px) {
   .footer-container {
     display: grid;
     gap: 30px;
@@ -95,6 +91,10 @@ footer {
   margin-bottom: 10px;
 
   }
+}
+
+@media screen and (max-width: 576px) {
+  
 }
 
 /* For small devices */
