--- a/src/style/PlaceList.css
+++ b/src/style/PlaceList.css
@@ -49,13 +49,11 @@
 
 /* BREAKPOINTS */
 /* Large Screens */
-/* @media screen and (max-width: 1250px) {
-  .container {
-    max-width: 992px;
-  margin: 0 auto;
-
+@media screen and (max-width: 920px) {
+  .placelist {
+    justify-items: center;
   }
-} */
+}
 
 /* @media screen and (max-width: 992px) {
   .container {
@@ -64,16 +62,14 @@
 } */
 
 /* For medium devices */
-/* @media screen and (max-width: 768px) {
-  .container {
-    max-width: 576px;
-  }
-} */
-
-@media screen and (max-width: 576px) {
+@media screen and (max-width: 768px) {
   .placelist {
     justify-items: center;
   }
+}
+
+@media screen and (max-width: 576px) {
+  
 }
 
 /* For small devices */
