--- a/src/style/Wallet.css
+++ b/src/style/Wallet.css
@@ -39,11 +39,11 @@ hr {
   align-items: center;
   padding: 10px 20px;
   border-radius: 12px;
-  border: 1px solid #CFD8DC;
+  border: 1px solid #cfd8dc;
 }
 
 .walletlist-container:nth-child(1) {
-    margin-bottom: 16px;
+  margin-bottom: 16px;
 }
 
 .walletlist-container > img {
@@ -66,4 +66,10 @@ hr {
 .walletlist > img:nth-child(2) {
   width: 40px;
   height: 40px;
+}
+
+@media screen and (max-width: 350px) {
+  .modal-title > h3 {
+    font-size: 20px;
+  }
 }
